Review Step: apply break-world CSS rule to prevent text to overflow

--- a/src/components/register-my-baby/steps/review/review.scss
+++ b/src/components/register-my-baby/steps/review/review.scss
@@ -48,6 +48,10 @@
       flex: 1 0 90%;
       display: flex;
       flex-direction: column;
+
+      > span {
+        word-break: break-all;
+      }
     }
 
     button.field-edit-btn {
